@@ -1,6 +1,8 @@
 ﻿===== Smarty 3.1-DEV  =====
 13/07/2011
 - optimized internal file write functionality
+- bugfix PHP did eat line break on nocache sections
+- fixed typo of Smarty_Security properties $allowed_modifiers and $disabled_modifiers
 
 06/07/2011
 - bugfix variable modifier must run befor gereral filtering/escaping
